--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <p id="description">
       Thank you for taking the time to help us improve the platform
     </p>
-    <form action="" id="survey-form"></form>
+    <form action="" id="survey-form">
+      <input type="text" id="name" placeholder="name" required/>
+      <input type="email" id="email" placeholder="email" required/>
+
+    </form>
     <!--
 
     Hello Camper!
