--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       Thank you for taking the time to help us improve the platform
     </p>
     <form action="" id="survey-form">
-      <input type="text" id="name" placeholder="name" required/>
-      <input type="email" id="email" placeholder="email" required/>
-
+      <input type="text" id="name" placeholder="name" required />
+      <input type="email" id="email" placeholder="email" required />
+      <input type="number" id="number" min="0" max="100" />
     </form>
     <!--
 
