--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
       Thank you for taking the time to help us improve the platform
     </p>
     <form action="" id="survey-form">
+      <label id="name-label">Name</label>
       <input type="text" id="name" placeholder="name" required />
+      <label id="email-label">Email</label>
       <input type="email" id="email" placeholder="email" required />
-      <input type="number" id="number" min="0" max="100" />
+      <label id="number-label">Number</label>
+      <input type="number" id="number" placeholder="number" min="0" max="100" />
+      <select id="dropdown">
+        <option>One</option>
+        <option>Two</option>
+        <option>Three</option>
+      </select>
     </form>
     <!--
 
