--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <option>Two</option>
         <option>Three</option>
       </select>
+
+      <input type="radio" value="Male" id="male" name="gender" />
+      <label for="male">Male</label>
+      <input type="radio" value="Female" id="female" name="gender" />
+      <label for="female">Female</label>
+
+      <input type="checkbox" value="one" />
+      <input type="checkbox" value="two" />
+      <input type="checkbox" value="three" />
     </form>
     <!--
 
