textarea and button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <input type="checkbox" value="one" />
       <input type="checkbox" value="two" />
       <input type="checkbox" value="three" />
+      <textarea></textarea>
+      <button id="submit"></button>
     </form>
     <!--
 
